--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -25,8 +25,16 @@
 </head>
 
 <body>
+  <!-- ======================================================= -->
+
+
+  <!-- thêm giao diện tết -->
+
   <div class="wrapper-masthead">
+
+
     <div class="container">
+
       <header class="masthead clearfix">
         <a href="/" class="site-avatar"><img
             src="https://user-images.githubusercontent.com/58626944/81643935-e8aa7080-9450-11ea-8f19-7bbe177ff474.png" /></a>
@@ -41,4 +49,7 @@
         </nav>
       </header>
     </div>
+
+    <!-- ==================================================================== -->
+
   </div>
