--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -11,5 +11,5 @@
     </div>
   </div>
 </body>
-<script src="/javascripts/flower.js"></script>
+<!-- <script src="/javascripts/flower.js"></script> -->
 </html>
